<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">
  <item
    android:id="@+id/nav_insert_food"
    android:icon="@drawable/ic_menu_camera"
    android:title="@string/insert_food" />
  <item
    android:id="@+id/nav_insert_symptom"
    android:icon="@drawable/ic_menu_camera"
    android:title="@string/insert_symptom" />
  <item
    android:id="@+id/nav_delete"
    android:icon="@drawable/ic_menu_gallery"
    android:title="@string/delete" />
  <item
    android:id="@+id/nav_search"
    android:icon="@drawable/ic_menu_slideshow"
    android:title="@string/search" />
  <item
    android:id="@+id/nav_results_foods"
    android:icon="@drawable/ic_menu_camera"
    android:title="@string/food_results" />
  <item
    android:id="@+id/nav_results_symptoms"
    android:icon="@drawable/ic_menu_camera"
    android:title="@string/symptom_results" />
</menu>