<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  android:orientation="vertical">

  <EditText
    android:id="@+id/editDelete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/name"
    android:importantForAutofill="no"
    android:inputType="textPersonName" />

  <RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|fill_horizontal"
    android:orientation="horizontal">

    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:checked="true"
      android:text="@string/food" />

    <RadioButton
      android:id="@+id/radioButtonSymptom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/symptom" />
  </RadioGroup>

  <Button
    android:id="@+id/btnDelete"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/delete" />
</LinearLayout>